syntax = "proto3";

package readysetgo.example.service.v1;

import "google/protobuf/empty.proto";
import "proto/example/example.proto";

service ExampleService {
  rpc GetExample(GetExampleRequest) returns (GetExampleResponse);
  rpc SetExample(SetExampleRequest) returns (google.protobuf.Empty);
}

message GetExampleRequest {
  string id = 1;
}

message GetExampleResponse {
  string id = 1;
  readysetgo.example.Example data = 2;
}

message SetExampleRequest {
  string id = 1;
  readysetgo.example.Example data = 2;
}
